# vamsijuvvigunta.github.io

./: .gitignore  CodeSamples.md  ExpandedRecentWorkSummary.md  GitAndCodeSamples.md  MultiLLMRouting.md  RecentWorkSummary.md
K8s/: 1-maas-onprem-cloud.html  1-maas-onprem-cloud.md  1-microk8s.html  1-microk8s.md  2-juju.html  3-juju-k8s.html  4-juju-k8s-storage.html  4-juju-remotenfs-charm.html  4-juju-remotenfs-charm.md  5-juju-kubeflow.html  5-juju-kubeflow.md  K8s_Deploy_HuggingFace_Sentiment_KServe.html
LLM/: LLM_Agents.md  LLM_FLAN_InstructionTunedT5.md  (+14 more)
Rust/agentic/lib-agentic/: Cargo.toml
Rust/agentic/lib-agentic/examples/: 01_one_shot_llm.rs  02_joke_gen_and_critique.md  02_joke_gen_and_critique.rs  03_tool_calling.md  03_tool_calling.rs  04_react_agent.md
Rust/agentic/lib-agentic/src/: agentic_errors.rs  agentic_msgs.rs  lib.rs
Rust/agentic/lib-agentic/src/nodes/: mod.rs
Rust/agentic/lib-agentic/src/nodes/llm/: llm_prompt_msg.rs  llm_prompter_node.rs  llm_response_msg.rs  mod.rs
Rust/agentic/lib-agentic/src/nodes/tool/: generic_tool_node.rs  llm_tool_schema.rs  mod.rs  tool_call_msg.rs  tool_response_msg.rs
Rust/agentic/lib-agentic/src/nodes/wrap/: mod.rs  msg_transform_wrapper_node.rs
Rust/agentic/lib-agentic/src/util/: macros_prelude.rs  mod.rs  msg_extractor.rs  msg_filter.rs  msg_filter_macros.rs  value_ext.rs
Rust/agentic/lib-pregel/: Cargo.toml
Rust/agentic/lib-pregel/src/: errors.rs  lib.rs  pregel_driver.rs  pregel_mailbox.rs  pregel_types.rs
Rust/agentic/lib-pregel/src/pregel_impl/: mod.rs  pregel_impl_types.rs  pregel_petgraph.rs
(+131 files in other folders)
