[package]
name = "lib-agentic"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
# -- App Libs
lib-pregel = { path = "../lib-pregel"}

#-- thirdparty
derive_more = { workspace = true }
itertools = { workspace = true }
serde_json = { workspace = true }

# tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# graph
petgraph = { workspace = true }

# HTTP Client
reqwest = "0.12.11"

# Async --
tokio = "1.42.0"

# LLM/AI
genai = "0.1.15"
async-trait = "0.1.83"

# Struct ⇔ Json Schema 
schemars = "0.8.21"

# Ser/De
serde = {version = "1.0.217", features = ["derive"]}
bitflags = "2.8.0"

[dev-dependencies]
assert_matches = "1.5.0"
