[package]
name = "lib-pregel"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
petgraph = { workspace = true }
derive_more = { workspace = true }
itertools = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { version = "1.42.0", features = ["full"] }
async-trait = "0.1.83"
